[tool.poetry]
name = "ctff-client"
version = "0.1.0"
description = "A library for using the ctff feature flag service"
authors = ["Nicolai Willems <nicwi@yousee.dk>"]
license = "MIT"
classifiers = [
  'Development Status :: 4 - Beta'
]
packages = [
  {include = "ctff", from="."}
]

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.18.1"
PyYAML = "^5.4.1"

[tool.poetry.dev-dependencies]
black = "^21.5b2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
